# EICrecon

./: .clang-format  .clang-tidy  .codespell-ignore  .codespellrc  .dir-locals.el  .git-blame-ignore-revs  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  BEMC.cc  BUILD_VERIFICATION.txt  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  CalorimeterHitAttenuation.cc  CalorimeterHitAttenuation.h  CalorimeterHitAttenuationConfig.h  Doxyfile  IMPLEMENTATION_SUMMARY.md  JEventProcessorPODIO.cc  LICENSE  LICENSE.JSA  NOTICE.md  PULSE_TRAITS_PLAN.md  README.md  TESTING_SUMMARY.md  TRUTHINESS_FINAL_SUMMARY.md  analyze.py  check.rb  client.py  compile.sh  covariance_matrix_analysis.md  custom_environment_example.sh  justfile  make.sh  podio_output.root  run.sh  run_w_edm4eic.txt  runtest_00.sh  (+7 more)
GEOMETRY/plugins/jana_dd4hep/: CMakeLists.txt  JDD4hep_service.cc  JDD4hep_service.h
I_O/plugins/jana_edm4hep/: CMakeLists.txt  EDM4hepWriter.cc  EDM4hepWriter.h  JEventSourcePODIO.cc  JEventSourcePODIO.h  jana_edm4hep.cc  make_datamodel_glue.py
RECON/plugins/BarrelEMCal/: BarrelEMCal.cc  CMakeLists.txt  EcalBarrelRawCalorimeterHit.h  JFactory_EcalBarrelRawCalorimeterHit.cc  JFactory_EcalBarrelRawCalorimeterHit.h  JFactory_RawCalorimeterHit_EcalBarrelRawCalorimeterHits.cc  JFactory_RawCalorimeterHit_EcalBarrelRawCalorimeterHits.h  README.md
src/: CMakeLists.txt  RandGen_driver.cpp
src/algorithms/: CMakeLists.txt
src/algorithms/anomaly/: AnomalyDetection.cc  AnomalyDetection.h  AnomalyDetectionConfig.h  CMakeLists.txt
src/algorithms/calorimetry/: CMakeLists.txt  CalorimeterCALOROCCalibration.cc  CalorimeterCALOROCCalibration.h  CalorimeterCALOROCCalibrationConfig.h  CalorimeterClusterMerger.cc  CalorimeterClusterMerger.h  CalorimeterClusterRecoCoG.cc  CalorimeterClusterRecoCoG.h  CalorimeterClusterRecoCoGConfig.h  CalorimeterClusterShape.cc  CalorimeterClusterShape.h  CalorimeterClusterShapeConfig.h  CalorimeterEOverPCut.cc  CalorimeterEOverPCut.h  CalorimeterEOverPCutConfig.h  CalorimeterEoverPCut.cc  CalorimeterEoverPCut.h  CalorimeterEoverPCutConfig.h  CalorimeterHitAttenuation.cc  CalorimeterHitAttenuation.h  CalorimeterHitAttenuationConfig.h  CalorimeterHitDigi.cc  CalorimeterHitDigi.h  CalorimeterHitDigiConfig.h  CalorimeterHitReco.cc  CalorimeterHitReco.h  CalorimeterHitRecoConfig.h  CalorimeterHitToTrackerHit.cc  CalorimeterHitToTrackerHit.h  CalorimeterHitsMerger.cc  CalorimeterHitsMerger.h  CalorimeterHitsMergerConfig.h  CalorimeterIslandCluster.cc  CalorimeterIslandCluster.h  CalorimeterIslandClusterConfig.h  CalorimeterPulseGeneration.cc  CalorimeterPulseGeneration.h  CalorimeterPulseGenerationConfig.h  CalorimeterScFiDigi.cc  CalorimeterScFiDigi.h  (+49 more)
src/algorithms/digi/: BTOFChargeSharing.cc  BTOFChargeSharing.h  BTOFChargeSharingConfig.h  BTOFHitDigiConfig.h  CALOROCDigitization.cc  CALOROCDigitization.h  CALOROCDigitizationConfig.h  CFDROCDigitization.cc  CFDROCDigitization.h  CFDROCDigitizationConfig.h  CMakeLists.txt  CalorimeterPulseGeneration.cc  CalorimeterPulseGeneration.h  CalorimeterPulseGenerationConfig.h  CollectionCollector.h  EICROCDigitization.cc  EICROCDigitization.h  EICROCDigitizationConfig.h  LGADChargeSharing.cc  LGADChargeSharing.h  LGADChargeSharingConfig.h  LGADHitDigiConfig.h  LGADPulseDigitization.cc  LGADPulseDigitization.h  LGADPulseDigitizationConfig.h  LGADPulseGeneration.cc  LGADPulseGeneration.h  LGADPulseGenerationConfig.h  MPGDTrackerDigi.cc  MPGDTrackerDigi.h  MPGDTrackerDigiConfig.h  MergeCollections.h  PhotoMultiplierHitDigi.cc  PhotoMultiplierHitDigi.h  PhotoMultiplierHitDigiAnalysis.cc  PhotoMultiplierHitDigiAnalysis.h  PhotoMultiplierHitDigiConfig.h  PulseCombiner.cc  PulseCombiner.h  PulseCombinerConfig.h  (+51 more)
src/algorithms/fardetectors/: CMakeLists.txt  Chi2TrackFit.cc  Chi2TrackFit.h  FarDetectorLinearProjection.cc  FarDetectorLinearProjection.h  FarDetectorLinearProjectionConfig.h  FarDetectorLinearTracking.cc  FarDetectorLinearTracking.h  FarDetectorLinearTrackingConfig.h  FarDetectorMLReconstruction.cc  FarDetectorMLReconstruction.h  FarDetectorMLReconstructionConfig.h  FarDetectorTrackerCluster.cc  FarDetectorTrackerCluster.h  FarDetectorTrackerClusterConfig.h  FarDetectorTransportationPostML.cc  FarDetectorTransportationPostML.h  FarDetectorTransportationPostMLConfig.h  FarDetectorTransportationPreML.cc  FarDetectorTransportationPreML.h  FarDetectorTransportationPreMLConfig.h  FarForwardHitExtractor.cc  FarForwardHitExtractor.h  FarForwardHitExtractorConfig.h  FarTrackerClusterConfig.h  FarTrackerTrackingConfig.h  MatrixTranserStatic.h  MatrixTransferStatic.cc  MatrixTransferStatic.h  MatrixTransferStaticConfig.h  MatrixTransferStaticConfig_OMD.h  MatrixTransferStatic_OMD.cc  MatrixTransferStatic_OMD.h  PolynomialMatrixReconstruction.cc  PolynomialMatrixReconstruction.h  PolynomialMatrixReconstructionConfig.h  SimpleNeuralNetworkInference.cc  SimpleNeuralNetworkInference.h  SimpleNeuralNetworkInferenceConfig.h  TorchScriptInterface.cc  (+6 more)
src/algorithms/interfaces/: ActsSvc.cc  ActsSvc.h  CMakeLists.txt  CompareObjectID.h  ICollectionProducer.h  ICollector.h  IObjectProducer.h  ISingleProducer.h  ParticleSvc.cc  ParticleSvc.h  UniqueIDGenSvc.h  WithPodConfig.h
src/algorithms/jana/: README.md
src/algorithms/meta/: CMakeLists.txt  Cloner.h  CollectionCollector.h  CollectionCollectorConfig.h  FilterByAssociations.h  FilterMatching.h  SubDivideCollection.h  SubDivideCollectionConfig.h  SubDivideFunctors.h
src/benchmarks/: CMakeLists.txt
src/cmake/: jana_plugin.cmake  print_subdirectory_tree.cmake
src/common/: unit_system.h
src/detectors/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/extensions/: CMakeLists.txt  README.md
src/factories/: CMakeLists.txt  TrackClusterSubtractor_factory.h
src/global/: CMakeLists.txt
src/scripts/: CMakeLists.txt  eicmkplugin.py  eicrecon-client.py  eicrecon-this.csh.in  eicrecon-this.sh.in  verify_for_dangling_references.py
src/services/: CMakeLists.txt
src/tests/: CMakeLists.txt  README.md
src/tools/: cmake_wrapper.sh  draw_clusters.py
src/utilities/: CMakeLists.txt
(+1827 files in other folders)
