add_subdirectory(interfaces)
add_subdirectory(calorimetry)
add_subdirectory(tracking)
add_subdirectory(particle_flow)
add_subdirectory(pid_lut)
add_subdirectory(digi)
add_subdirectory(reco)
add_subdirectory(fardetectors)
add_subdirectory(onnx)
add_subdirectory(meta)

include_directories(
  /home/ayk/ePIC-2026-07-10/install/include
)
add_subdirectory(pid)
