
add_subdirectory( detectors/BEMCcheck )
add_subdirectory( detectors/RPOTScheck )
add_subdirectory( reconstruction/TRACKINGcheck )
add_subdirectory( reconstruction/tracking_occupancy )
add_subdirectory( reconstruction/tracking_efficiency )
add_subdirectory( reconstruction/tof_efficiency )
add_subdirectory( reconstruction/lfhcal_studies )
add_subdirectory( reconstruction/femc_studies )
