add_subdirectory(BEMC)
add_subdirectory(EEMC)
add_subdirectory(FEMC)
add_subdirectory(EHCAL)
add_subdirectory(BHCAL)
add_subdirectory(FHCAL)
add_subdirectory(ZDC)
add_subdirectory(B0ECAL)

# Tracking detectors
add_subdirectory(BTRK)      # Barrel tracker
add_subdirectory(BVTX)      # Barrel vertex
add_subdirectory(ECGEM)     # EndCap GEM
add_subdirectory(ECTRK)     # EndCap tracker
add_subdirectory(MPGD)      # MPDG tracker
add_subdirectory(RPOTS)     # Roman Pots
add_subdirectory(ECTOF)     # Endcap TOF
add_subdirectory(BTOF)      # Barrel TOF
add_subdirectory(B0TRK)     # B0 tracker

# PID detectors
add_subdirectory(DRICH)
