# io/podio exports podio_datamodel_glue target needed by plugin_add
add_subdirectory(io/podio)
add_subdirectory(algorithms_init)
add_subdirectory(evaluator)
add_subdirectory(geometry/dd4hep)
add_subdirectory(geometry/acts)
add_subdirectory(geometry/richgeo)
add_subdirectory(log)
add_subdirectory(particle)
add_subdirectory(rootfile)
add_subdirectory(pid_lut)
